# COMP6940-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: champion_model.pkl  encoder.pkl  scaler.pkl  shap_values.parquet
data/merged_data/: merged.parquet  residuals.parquet  shap_values.parquet  test.parquet  val.parquet
notebooks/part1/: 01_data_loading_vizualization.ipynb  02_feature_egineering.ipynb  03_model_interpret.ipynb  04_shap_counterfactual.ipynb
