[project]
name = "group-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders>=2.9.0",
    "google-api-core>=2.10.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mlflow>=2.15.0",
    "nbformat>=5.10.4",
    "pandas<3.0.0",
    "parquet>=1.3.1",
    "plotly>=6.7.0",
    "protobuf<5.0.0",
    "pyarrow<23.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<70.0.0",
    "shap>=0.51.0",
    "wheel>=0.46.3",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
